project2/tests/reject/0-lessthan-bad.cc
int main(){
    bool x = false < 3;
}